--- a/googlemaps.html
+++ b/googlemaps.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 
 <link href="https://ssl.gstatic.com/docs/script/css/add-ons.css"
       rel="stylesheet">
@@ -14,7 +15,7 @@
         <button id="get_summary">Summaries</button>
     </div>
 
-    <div id='test'>
+    <div id='summary'>
     </div>
 
 
@@ -72,9 +73,9 @@
     function insertSummary(data){
         for (var i = 0; i < data.length; i++) {
             var txt = document.createElement("p");    // Create with DOM
-            txt.innerHTML = data[i].name;
-            $('#test').append(txt);
-            // $('#test').text(data);
+            txt.innerHTML = data[i];
+            $('#summary').append(txt);
+            // $('#summary').text(data);
         }}
 
 </script>
